web-infras/parser/tests/fixtures/babel/core/uncategorised/484/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,10)
1|function eval() {'use strict'; }
 |        ^
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function eval() {'use strict'; }
 |        ^
